# cubo

./: .gitignore  .gitmodule  CMakeLists.txt  LICENSE.txt  makefile
include/: common.h  config.h  stb_image.h  vda.hpp
include/glad/: glad.h
include/learnopengl/: shader_m.h
shaders/: 7.3.camera.fs  cubo.fs  cubo.vs
src/: common.cpp  glad.c  main.cpp
tools/: rgb.py
